tree-sitter-outrun/test/corpus/control_flow_if_basic.txt
================
Basic if/else statement
================

def test_if(): String {
    if condition {
        "true branch"
    } else {
        "false branch"
    }
}

---

(source_file
  (item
    (function_definition
      (identifier)
      (return_type
        (type_annotation
          (module_path
            (type_identifier))))
      (block
        (statement
          (expression
            (primary_expression
              (if_expression
                (expression
                  (primary_expression
                    (identifier)))
                (block
                  (statement
                    (expression
                      (primary_expression
                        (literal
                          (string
                            (string_content)))))))
                (block
                  (statement
                    (expression
                      (primary_expression
                        (literal
                          (string
                            (string_content)))))))))))))))
