tree-sitter-outrun/test/corpus/control_flow_if_nested.txt
================
Nested if statements
================

def classify_number(x: Integer): String {
    if Integer.positive?(x) {
        if Integer.even?(x) {
            "positive even"
        } else {
            if x > 10 {
                "positive odd large"
            } else {
                "positive odd small"
            }
        }
    } else {
        if Integer.zero?(x) {
            "zero"
        } else {
            "negative"
        }
    }
}

---

(source_file
  (item
    (function_definition
      (identifier)
      (parameter_list
        (parameter
          (identifier)
          (type_annotation
            (module_path
              (type_identifier)))))
      (return_type
        (type_annotation
          (module_path
            (type_identifier))))
      (block
        (statement
          (expression
            (primary_expression
              (if_expression
                (expression
                  (primary_expression
                    (identifier))
                  (function_call_postfix
                    (identifier)
                    (argument_list
                      (argument
                        (shorthand_argument
                          (identifier))))))
                (block
                  (statement
                    (expression
                      (primary_expression
                        (if_expression
                          (expression
                            (primary_expression
                              (identifier))
                            (function_call_postfix
                              (identifier)
                              (argument_list
                                (argument
                                  (shorthand_argument
                                    (identifier))))))
                          (block
                            (statement
                              (expression
                                (primary_expression
                                  (literal
                                    (string
                                      (string_content)))))))
                          (block
                            (statement
                              (expression
                                (primary_expression
                                  (if_expression
                                    (expression
                                      (binary_greater
                                        (primary_expression
                                          (identifier))
                                        (primary_expression
                                          (literal
                                            (integer)))))
                                    (block
                                      (statement
                                        (expression
                                          (primary_expression
                                            (literal
                                              (string
                                                (string_content)))))))
                                    (block
                                      (statement
                                        (expression
                                          (primary_expression
                                            (literal
                                              (string
                                                (string_content)))))))))))))))))
                (block
                  (statement
                    (expression
                      (primary_expression
                        (if_expression
                          (expression
                            (primary_expression
                              (identifier))
                            (function_call_postfix
                              (identifier)
                              (argument_list
                                (argument
                                  (shorthand_argument
                                    (identifier))))))
                          (block
                            (statement
                              (expression
                                (primary_expression
                                  (literal
                                    (string
                                      (string_content)))))))
                          (block
                            (statement
                              (expression
                                (primary_expression
                                  (literal
                                    (string
                                      (string_content))))))))))))))))))))
