tree-sitter-outrun/test/corpus/control_flow_if_no_else.txt
================
If without else
================

def maybe_do(): String {
    if condition {
        "execute"
    }
}

---

(source_file
  (item
    (function_definition
      (identifier)
      (return_type
        (type_annotation
          (module_path
            (type_identifier))))
      (block
        (statement
          (expression
            (primary_expression
              (if_expression
                (expression
                  (primary_expression
                    (identifier)))
                (block
                  (statement
                    (expression
                      (primary_expression
                        (literal
                          (string
                            (string_content)))))))))))))))
