tree-sitter-outrun/test/corpus/destructuring_list_basic.txt
================
Basic list destructuring
================

let [first, second] = list

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (list_destructure
          (destructure_pattern
            (identifier))
          (destructure_pattern
            (identifier))))
      (expression
        (primary_expression
          (identifier))))))
