tree-sitter-outrun/test/corpus/destructuring_list_rest.txt
================
List destructuring with rest pattern
================

let [first, second, ..rest] = list

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (list_destructure
          (destructure_pattern
            (identifier))
          (destructure_pattern
            (identifier))
          (destructure_pattern
            (identifier))))
      (expression
        (primary_expression
          (identifier))))))
