tree-sitter-outrun/test/corpus/destructuring_nested.txt
================
Nested destructuring (tuple in struct)
================

let User { profile } = get_user()

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (struct_destructure
          (struct_destructure_start)
          (destructure_pattern
            (identifier))))
      (expression
        (primary_expression
          (function_call
            (identifier)))))))
