tree-sitter-outrun/test/corpus/destructuring_practical_examples.txt
================
Let binding assertion with zero for error checking
================

let 0 = validate_config(config)

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (literal
          (integer)))
      (expression
        (primary_expression
          (function_call
            (identifier)
            (argument_list
              (argument
                (shorthand_argument
                  (identifier))))))))))

================
Let binding assertion with false for feature flag check
================

let false = is_feature_enabled?(feature: "experimental")

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (literal
          (boolean)))
      (expression
        (primary_expression
          (function_call
            (identifier)
            (argument_list
              (argument
                (named_argument
                  (identifier)
                  (expression
                    (primary_expression
                      (literal
                        (string
                          (string_content))))))))))))))

================
Let binding assertion with expected string value
================

let "initialized" = get_app_state()

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (literal
          (string
            (string_content))))
      (expression
        (primary_expression
          (function_call
            (identifier)))))))

================
Let binding with list destructuring (identifiers only)
================

let [first, second, last] = get_score_data()

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (list_destructure
          (destructure_pattern
            (identifier))
          (destructure_pattern
            (identifier))
          (destructure_pattern
            (identifier))))
      (expression
        (primary_expression
          (function_call
            (identifier)))))))

================
Let binding assertion with specific atom for state check
================

let :ready = connection_status()

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (literal
          (atom
            (identifier))))
      (expression
        (primary_expression
          (function_call
            (identifier)))))))

================
Let binding with exact version number check
================

let 1.0 = get_api_version()

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (literal
          (float)))
      (expression
        (primary_expression
          (function_call
            (identifier)))))))
