tree-sitter-outrun/test/corpus/destructuring_tuple_basic.txt
================
Basic tuple destructuring
================

let (x, y) = (1, 2)

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (tuple_destructure
          (destructure_pattern
            (identifier))
          (destructure_pattern
            (identifier))))
      (expression
        (primary_expression
          (tuple_literal
            (expression
              (primary_expression
                (literal
                  (integer))))
            (expression
              (primary_expression
                (literal
                  (integer))))))))))
