tree-sitter-outrun/test/corpus/destructuring_tuple_three.txt
================
Tuple destructuring with three elements
================

let (x, y, z) = some_tuple

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (tuple_destructure
          (destructure_pattern
            (identifier))
          (destructure_pattern
            (identifier))
          (destructure_pattern
            (identifier))))
      (expression
        (primary_expression
          (identifier))))))
