tree-sitter-outrun/test/corpus/field_access_basic.txt
================
Basic field access
================

let email = user.email

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (identifier))
      (expression
        (primary_expression
          (identifier))
        (field_access
          (identifier))))))
