tree-sitter-outrun/test/corpus/field_access_chained.txt
================
Chained field access
================

let address = user.profile.address

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (identifier))
      (expression
        (primary_expression
          (identifier))
        (field_access
          (identifier))
        (field_access
          (identifier))))))
