tree-sitter-outrun/test/corpus/field_access_mixed.txt
================
Mixed field and tuple access
================

let value = data.items.0.name

---

(source_file
  (item
    (let_binding
      (identifier)
      (expression
        (primary_expression
          (identifier))
        (field_access
          (identifier))
        (tuple_access
          (integer))
        (field_access
          (identifier))))))
