tree-sitter-outrun/test/corpus/field_access_tuple.txt
================
Tuple field access
================

let first = tuple.0

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (identifier))
      (expression
        (primary_expression
          (identifier))
        (tuple_access
          (integer))))))
