tree-sitter-outrun/test/corpus/function_capture_arity.txt
================
Function capture with arity
================

let logger = &Logger.log/2

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (identifier))
      (expression
        (binary_divide
          (primary_expression
            (function_capture
              (qualified_function_ref
                (identifier))))
          (field_access
            (identifier))
          (primary_expression
            (literal
              (integer))))))))
