tree-sitter-outrun/test/corpus/function_capture_basic.txt
================
Basic function capture
================

let mapper = &String.upcase

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (identifier))
      (expression
        (primary_expression
          (function_capture
            (qualified_function_ref
              (identifier))))
        (field_access
          (identifier))))))
