tree-sitter-outrun/test/corpus/function_capture_local.txt
================
Local function capture
================

let processor = &my_function

---

(source_file
  (item
    (let_binding
      (identifier)
      (expression
        (primary_expression
          (function_capture
            (qualified_function_ref
              (identifier))))))))
