tree-sitter-outrun/test/corpus/function_capture_usage.txt
================
Function captures in higher-order functions
================

const RESULT: List<String> = names |> List.map(func: &String.upcase)

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier))
        (generic_args
          (type_annotation
            (module_path
              (type_identifier)))))
      (expression
        (pipe_expression
          (primary_expression
            (identifier))
          (primary_expression
            (identifier))
          (function_call_postfix
            (identifier)
            (argument_list
              (argument
                (named_argument
                  (identifier)
                  (expression
                    (primary_expression
                      (function_capture
                        (qualified_function_ref
                          (identifier))))
                    (field_access
                      (identifier))))))))))))
