tree-sitter-outrun/test/corpus/functions_basic.txt
================
Simple public function
================

def greet(): String {
    "Hello!"
}

---

(source_file
  (item
    (function_definition
      (identifier)
      (return_type
        (type_annotation
          (module_path
            (type_identifier))))
      (block
        (statement
          (expression
            (primary_expression
              (literal
                (string
                  (string_content))))))))))

================
Simple private function
================

defp validate(): Boolean {
    true
}

---

(source_file
  (item
    (function_definition
      (identifier)
      (return_type
        (type_annotation
          (module_path
            (type_identifier))))
      (block
        (statement
          (expression
            (primary_expression
              (literal
                (boolean)))))))))
