tree-sitter-outrun/test/corpus/functions_guards_multiple.txt
================
Multiple function definitions with different guards
================

def process(x: Integer): String
when Integer.positive?(x) {
    "positive"
}

def process(x: Integer): String
when Integer.negative?(x) {
    "negative"
}

---

(source_file
  (item
    (function_definition
      (identifier)
      (parameter_list
        (parameter
          (identifier)
          (type_annotation
            (module_path
              (type_identifier)))))
      (return_type
        (type_annotation
          (module_path
            (type_identifier))))
      (guard_clause
        (guard_expression
          (expression
            (primary_expression
              (identifier))
            (function_call_postfix
              (identifier)
              (argument_list
                (argument
                  (shorthand_argument
                    (identifier))))))))
      (block
        (statement
          (expression
            (primary_expression
              (literal
                (string
                  (string_content)))))))))
  (item
    (function_definition
      (identifier)
      (parameter_list
        (parameter
          (identifier)
          (type_annotation
            (module_path
              (type_identifier)))))
      (return_type
        (type_annotation
          (module_path
            (type_identifier))))
      (guard_clause
        (guard_expression
          (expression
            (primary_expression
              (identifier))
            (function_call_postfix
              (identifier)
              (argument_list
                (argument
                  (shorthand_argument
                    (identifier))))))))
      (block
        (statement
          (expression
            (primary_expression
              (literal
                (string
                  (string_content))))))))))
