tree-sitter-outrun/test/corpus/functions_parameters.txt
================
Function with parameters
================

def add(left: Integer, right: Integer): Integer {
    left + right
}

---

(source_file
  (item
    (function_definition
      (identifier)
      (parameter_list
        (parameter
          (identifier)
          (type_annotation
            (module_path
              (type_identifier))))
        (parameter
          (identifier)
          (type_annotation
            (module_path
              (type_identifier)))))
      (return_type
        (type_annotation
          (module_path
            (type_identifier))))
      (block
        (statement
          (expression
            (binary_add
              (primary_expression
                (identifier))
              (primary_expression
                (identifier)))))))))
