tree-sitter-outrun/test/corpus/functions_qualified_nested.txt
================
Nested module qualified function call
================

const CLIENT: Client = Http.Client.new(timeout: 30, retries: 3)

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (identifier))
        (field_access
          (identifier))
        (function_call_postfix
          (identifier)
          (argument_list
            (argument
              (named_argument
                (identifier)
                (expression
                  (primary_expression
                    (literal
                      (integer))))))
            (argument
              (named_argument
                (identifier)
                (expression
                  (primary_expression
                    (literal
                      (integer))))))))))))
